src/MiniJava/Tests/DriverTests/access_undefined_field.err
access_undefined_field.mj:7:15-23: error: No field 'foo' in class 'List'
            return this.foo; // should complain
                   ^^^^^^^^

1 errors in total.
