src/MiniJava/Tests/DriverTests/access_undefined_field.mj
class List
{
    List next;
    int value;
    public List skipThree()
    {
        return this.foo; // should complain
    }
}